--- a/10-funding.qmd
+++ b/10-funding.qmd
@@ -1,5 +1,86 @@
 # Funding {#funding}
 
+## General information
+
+Graduate students in the program normally receive most of their support from a combination of assistantships and fellowships. There are several types of assistantships: Teaching Assistants (TAs) run labs and do grading and other tasks for undergraduate classes; Research Assistantships (RAs) support students working on a faculty member’s project (20 hours/week); and students may be supported as Project Assistants (PAs) on their advisors’ external grants. See Chapter 5 for more information about assistantships.
+
+Institutional support during the summer is not guaranteed at the time of admission; however, summer support is available from several sources, e.g.
+
+• The Graduate School offers competitive summer fellowships for TAs (see below). Since these fellowships provide only partial support, advisors are strongly encouraged to make up the difference from other sources for their students who win fellowships. (To quote an old Harvard staff union slogan, “you can’t eat prestige.”)
+
+• Advisors often have other sources of funds with which to provide summer support.
+
+Students are strongly encouraged to apply for independent fellowship support, as well as for funding to pay for research expenses, travel, etc. Obtaining independent funding is professionally as well as financially useful. See “useful links” below for some ideas about how to get started.
+
+### Program policies and expectations
+
+Subject to satisfactory progress by the student, the Biological Sciences Graduate Program provides financial support up to the limit stated in the admission letter: normally two years (four semesters) of academic-year support for the M.S. degree and four years (eight semesters) of academic-year support for the Ph.D. A student who completes an M.S. and then continues as a Ph.D. candidate, or who converts from M.S. to Ph.D. enrollment, may anticipate a total of four years of support from the program. 
+
+Additional support may be available based on a clear need arising from the nature of the research (e.g. field projects that require two summers of data), and evidence of strong progress toward completion. A decision to request additional support must be made by the start of the final semester of guaranteed support. Where there is a compelling reason for an extension, the student’s advisor must present a written request for one additional semester of support from the program, explaining why the student needs more time to complete the degree.  The Admissions Committee and Chair will review and decide on such requests. Approval is not automatic: students and advisors should not assume that extended support will be available if the degree is not completed on time.
+
+Since one purpose of limiting the duration of support is to encourage students to complete their degrees on schedule, students initially supported in other ways who later receive a Teaching or Research/Project Assistantship may not be entitled to the full duration of support stated above. All students will be advised of the extent of support they may expect at the time of admission. 
+
+Teaching or Research/Project Assistantship appointments (see Chapter 5) are normally for the academic year, but can be terminated at the end of a semester if performance is unsatisfactory. With satisfactory performance in both research and teaching, the student, once appointed to an assistantship, can expect to be reappointed in subsequent years up to the limit specified upon admission.
+
+Students who obtain their own funding (e.g. through a competitive fellowship, or part-time students working for state or federal agencies) are not penalized by a reduction of support from the program: they are still entitled to the full number of semesters stated in their admission letter.
+
+### Support for graduate student travel and research expenses
+
+The program has some funds available to support student travel. The student needs to submit a formal request to the Chair, detailing what meeting they are planning on attending, when and where the meeting will take place, whether they are presenting a poster or giving a talk, and a solid estimate of costs for meals, housing, etc. The Program will help pay for travel only if a student presents a poster or gives a talk -- not if they are just attending the meeting. In the past, travel grants have been for up to $250. Students can request this once in a single fiscal year.
+
+The Graduate School offers travel grants for graduate students who are presenting papers and posters at professional meetings and conferences. They generally do not support travel to workshops, seminars, and conferences where students are not presenting, but will consider such requests where the nature of the program is directly related to the student’s research agenda at UNH. Travel grants are also available to students who are attending professional development workshops and seminars that will enhance their research agendas. Travel grants will not exceed $200 per student per conference, or $400 per student per year. https://www.gradschool.unh.edu/php/travel_grant.php
+
+See “Useful links” below for more possibilities.
+
+### UNH Graduate School fellowships
+Students are strongly encouraged to apply for the UNH Graduate School’s Summer TA Fellowship (provides partial support for one summer) and Dissertation Year Fellowship (provides support for the final year of Ph.D. work). Detailed information is available at http://www.gradschool.unh.edu/pdf/frm_aid.php .
+
+Pre-application for Summer TA Fellowships. Summer TA Fellowships are allocated mainly on the basis of merit, but there is also consideration given to distributing them across programs – in fact, the Graduate School requires each program to rank their students who are applying, before applications are submitted. The likelihood of lots of students from the same program receiving awards is extremely low; rather, programs are most successful when they put forward a short list of their strongest applicants. To enable students and letter-writers to focus their time and energy where it will be most likely to pay off, the Biological Sciences Program has instituted a pre-application procedure.
+The Awards and Scholarship Committee is responsible for pre-applications and ranking, and will publicize the procedure to be followed, including a due date for pre-application materials. Note that students who do not follow this procedure will automatically be ranked at the bottom of the list of applicants from the program.
+
+## Useful links
+
+• UNH Graduate School information on Graduate Appointments, fees and financial support: https://catalog.unh.edu/graduate/general-information/fees-financial-support/ (scroll down)
+• UNH Financial Aid Office: financialaid.unh.edu/
+• UNH Graduate School financial aid info https://gradschool.unh.edu/admissions/financial
+• UNH Office of National Fellowships: www.unh.edu/fellowships-office/
+• UNH Graduate School Information on Dissertation Year Fellowships, Summer Teaching Assistant Fellowships and Travel Grants: www.gradschool.unh.edu/pdf/frm_aid.php
+• UNH Research Office links for grad students (https://www.unh.edu/research/resources-graduate-students-seeking-funding)
+• UNH Research Office general advice about finding funding (https://www.unh.edu/research/find-funding-0)
+• Funding opportunities available through the School of 
+Marine Sciences and Ocean Engineering: marine.unh.edu/funding-and-opportunities
+• National Science Foundation Graduate Research Fellowship Program (https://www.nsfgrfp.org/)
+	Very prestigious and very competitive; watch for announcements from the Graduate School about information sessions and proposal preparation support. Also track down the current UNH graduate students who’ve won them!
+
+
+# Graduate Assistantships: Teaching, Research, and Project
+
+## UNH Graduate School Graduate Assistant handbook
+
+The GA Handbook provides detailed information on registration requirements, policies, workload, and other critical topics related to assistantships. The handbook is regularly revised and updated; please contact the Graduate School or search their website for a current version.
+
+Essential policies are stated in the Graduate Catalog: https://catalog.unh.edu/graduate/
+
+Teaching Assistantships, Research Assistantships, and Project Assistantships cover a stipend, health insurance, and the technology fee. Students are responsible for other mandatory fees. 
+
+### Teaching Assistantships
+
+An opportunity to teach is an important part of every graduate student's education. Most students in the program receive support as Teaching Assistants during at least part of their enrollment. Students not offered a teaching assistantship at the commencement of their enrollment are considered whenever positions become available, but presence in the program is not a guarantee of support. 
+
+Teaching Assistants are half-time employees (20 hrs/week), with considerable responsibilities to their students and to the department/program. Teaching Assistantships are awarded by the Department Chair in consultation with the GPC. The process is complicated: it involves balancing teaching needs, student expertise, and fair allocation of resources.
+
+A Teaching Assistant's performance is evaluated by the students in the course, who complete a formal course evaluation at the end of the semester. The results are available for the Teaching Assistant and the course supervisor. In addition, the instructor in whose course you serve as a TA should provide written evaluation and feedback at the end of the semester: this information is important for your annual progress review as well as for applications for Summer TA Fellowships (see Chapter 4).
+
+Poor performance as a Teaching Assistant may jeopardize continued funding.
+
+### Research and Project Assistantships
+
+Research/Project Assistantships may be available on specific research projects supported by external grants or contracts. Responsibility for filling a Research or Project Assistantship rests with the faculty member who administers the grant, with the proviso that any RA/PA appointed must be acceptable for admission as a graduate student. Tuition waivers are usually available for Research Assistants. The duration of support on an Assistantship is determined by the faculty member administering the grant. A student who makes insufficient progress or whose academic performance is unsatisfactory may be dismissed from the program even though RA support remains available. 
+
+It is critical that the RA/PA and the project supervisor communicate clearly about expectations and responsibilities. Students owe the project that pays them 20 hours per week, as a condition of their appointment; but if it overlaps their own research (as is often the case), they may well be working on it much more than that.
+
+
+
 
 ## Common Internal UNH Funds
 - [SMSOE Graduate Research Fund](https://marine.unh.edu/opportunities/research-funding), up to $5000 for grad/undergrad stipend, supplies, travel. Applications due in March.
