--- a/06-ms-integrativebiology.qmd
+++ b/06-ms-integrativebiology.qmd
@@ -98,3 +98,9 @@ The student is responsible for transmitting necessary paperwork to the Graduate 
 ### Graduation
 
 The Graduate School website provides detailed information on graduation procedures, including deadlines, filing “intent to graduate” notification, submitting theses/dissertations to the Graduate School, and Commencement: http://www.gradschool.unh.edu/graduation.php
+
+
+### Student Rights and Key Policies
+
+UNH’s statement on Student Rights, Rules, and Responsibilities applies to graduate students as well as to undergraduates. It can be found at https://catalog.unh.edu/srrr/ 
+See Graduate School Catalog for general information, policies, and student rights: https://catalog.unh.edu/graduate/
