--- a/01-program-overview.qmd
+++ b/01-program-overview.qmd
@@ -54,6 +54,17 @@ Students and research projects do not all progress at the same pace. The timelin
 
 
 
+Program contacts and Information:
+• Administrative staff: Lisa Buchalski, lisa.buchalski@unh.edu, (603)862-3626
+• Department Chair: Elizabeth Harvey, elizabeth.harvey@unh.edu, (603)862-3418
+• Associate Chair: Melissa Aikens, melissa.aikens@unh.edu, (603)862-0840
+• Graduate Program Coordination & Admissions Committee (check with the department for current membership and option representatives). 
+• Program Faculty – see https://colsa.unh.edu/biological-sciences/people
+• Program web site: general academic information at https://colsa.unh.edu/biological-sciences/academics (scroll to the bottom for grad programs); copies of useful forms, faculty listing, and key links for current grad students and advisors at https://colsa.unh.edu/biological-sciences/key-documents .
+
+
+
+
 
 
 
