--- a/13-helpful-links.qmd
+++ b/13-helpful-links.qmd
@@ -1,5 +1,25 @@
 # Helpful links {#helpful-links}
 
+## Mental Health and Wellness
+
+If it's an emergency, go here https://www.unh.edu/pacs/services/crisis-emergency-services and/or call (603) 862-2090 (Relay NH: 1-800-735-2964) (staffed 24/7 -- press 0 to speak to a counselor). Dialing 988 is also always an option.
+Other Emergency Numbers
+Emergency Numbers
+•	Psychological and Counseling Services (PACS):(603) 862-2090
+•	Portsmouth Regional Hospital:(603) 433-5135
+•	SHARPP (Sexual Harassment and Rape Prevention Program: (603) 862-3494 (Relay NH 1-800-735-2964)
+•	Local Police Department: 911
+
+
+• Psychological and Counseling Services (PACS) offers individual counseling, group counseling, consultations, and online resources to the UNH community. Graduate students who have paid their mandatory fees are eligible for up to 8 individual sessions per semester, and unlimited group counseling sessions (we highly recommend the Graduate Student Support Group!). Check out their virtual care package to get the details.
+
+	PACS main page: https://www.unh.edu/pacs/
+	Virtual Care Package: https://www.unh.edu/pacs/resources/virtual-care-package  
+(tons of information about what is available through PACS, and elsewhere, including resources specifically related to mental health and covid-19, online resources for LGBTQ+ folks, and much else)
+
+You may want to talk to your advisor, grad program coordinator, department chair or another trusted faculty or staff member: most of us aren't trained mental health professionals, but we care deeply about our students and will do our best to help you get the support you need. If you're struggling, let someone know so we can try to help. Honestly, struggling with your mental health is a pretty normal part of graduate school...most of us have been there ourselves at one time or another.
+
+
 
 ## People or institutions we have or currently work with
 
