--- a/01-program-overview.qmd
+++ b/01-program-overview.qmd
@@ -52,7 +52,9 @@ The M.S. degree should normally be completed in two years. The University requir
 The Ph.D. degree should normally be completed within five years (three years for students entering with a master’s degree). All graduate work for the Ph.D. must be completed within eight years of enrollment, or within seven years if the student entered with a master's degree in the same field. Per University policy, the student must be advanced to candidacy within five years after enrollment or within four years if the student entered with a master's in the same field. In DBS, we encourage students to advance to candidacy in the second or third year. 
 Students and research projects do not all progress at the same pace. The timelines are offered as a guide, but departure from them is permissible when circumstances warrant. There are, however, some firm Graduate School deadlines that must be adhered to: see https://gradschool.unh.edu/academics/graduate-school-academic-calendar  for details.
 
+# Graduate School Involvement
 
+See the graduate school website for opportunities and information on Graduate Student Senate (GSS), workshops, the Graduate Research Conference, and additional funding programs. The Graduate School sends a weekly email highlighting upcoming programs, events, opportunities, and deadlines that are important for graduate students. READ IT.
 
 # Program contacts and Information:
 • Administrative staff: Lisa Buchalski, lisa.buchalski@unh.edu, (603)862-3626
