--- a/10-funding.qmd
+++ b/10-funding.qmd
@@ -2,13 +2,7 @@
 
 ## General information
 
-Graduate students in the program normally receive most of their support from a combination of assistantships and fellowships. There are several types of assistantships: Teaching Assistants (TAs) run labs and do grading and other tasks for undergraduate classes; Research Assistantships (RAs) support students working on a faculty member’s project (20 hours/week); and students may be supported as Project Assistants (PAs) on their advisors’ external grants. See Chapter 5 for more information about assistantships.
-
-Institutional support during the summer is not guaranteed at the time of admission; however, summer support is available from several sources, e.g.
-
-• The Graduate School offers competitive summer fellowships for TAs (see below). Since these fellowships provide only partial support, advisors are strongly encouraged to make up the difference from other sources for their students who win fellowships. (To quote an old Harvard staff union slogan, “you can’t eat prestige.”)
-
-• Advisors often have other sources of funds with which to provide summer support.
+Graduate students in the program normally receive most of their support from a combination of assistantships and fellowships. There are several types of assistantships: Teaching Assistants (TAs) run labs and do grading and other tasks for undergraduate classes; Research Assistantships (RAs) support students working on a faculty member’s project (20 hours/week); and students may be supported as Project Assistants (PAs) on their advisors’ external grants. Offer letters would also specify summer funding. 
 
 Students are strongly encouraged to apply for independent fellowship support, as well as for funding to pay for research expenses, travel, etc. Obtaining independent funding is professionally as well as financially useful. See “useful links” below for some ideas about how to get started.
 
