--- a/01-program-overview.qmd
+++ b/01-program-overview.qmd
@@ -32,43 +32,85 @@ As a department, we voted to adopt the [Healthy Research Teams & Labs framework]
 7. Encouraging students to be curious, innovative, and open in their work. We understand that research integrity and rigor can be achieved when students are encouraged to be curious, collaborative, and open throughout the research process.  
 
 
----
-#Summary of Shared Requirements
-M.S. Degree:
-o	30 credit hours total, with 10 maximum being research credit
-o	Thesis proposal, OKed by thesis committee
-o	Public presentation and thesis defense with committee
+## Summary of Shared Requirements
 
+### Degree Requirements
 
-Ph.D. Degree:
-o	Variable credit hours dependent on program, and guidance committee recommendations
-o	Thesis proposal, OKed by thesis committee
-o	Written and oral comprehensive exams
-o	Public presentation and dissertation defense with committee
+#### M.S. Degree
+- **30 credit hours total**, with a maximum of **10 research credits**
+- Thesis proposal, approved by the thesis committee
+- Public presentation and thesis defense with the committee
 
+#### Ph.D. Degree
+- Variable credit hours, dependent on program and guidance committee recommendations
+- Thesis proposal, approved by the thesis committee
+- Written and oral comprehensive exams
+- Public presentation and dissertation defense with the committee
 
-The M.S. degree should normally be completed in two years. The University requires that all graduate work for any master's degree must be completed within six years from the date of enrollment in the program. 
+### Expected Timelines and University Limits
 
-The Ph.D. degree should normally be completed within five years (three years for students entering with a master’s degree). All graduate work for the Ph.D. must be completed within eight years of enrollment, or within seven years if the student entered with a master's degree in the same field. Per University policy, the student must be advanced to candidacy within five years after enrollment or within four years if the student entered with a master's in the same field. In DBS, we encourage students to advance to candidacy in the second or third year. 
-Students and research projects do not all progress at the same pace. The timelines are offered as a guide, but departure from them is permissible when circumstances warrant. There are, however, some firm Graduate School deadlines that must be adhered to: see https://gradschool.unh.edu/academics/graduate-school-academic-calendar  for details.
+| Degree | Typical Time to Completion | Maximum Time Allowed | Additional Requirements |
+|------|----------------------------|----------------------|-------------------------|
+| M.S. | 2 years | 6 years from enrollment | — |
+| Ph.D. (entering with B.S.) | 5 years | 8 years from enrollment | Advancement to candidacy within 5 years |
+| Ph.D. (entering with M.S.) | 4 years | 7 years from enrollment | Advancement to candidacy within 4 years |
 
-# Graduate School Involvement
+In DBS, students are encouraged to advance to candidacy in the **second or third year**.
 
-See the graduate school website for opportunities and information on Graduate Student Senate (GSS), workshops, the Graduate Research Conference, and additional funding programs. The Graduate School sends a weekly email highlighting upcoming programs, events, opportunities, and deadlines that are important for graduate students. READ IT.
+Students and research projects do not all progress at the same pace. These timelines are offered as guidance, and departures from them are permissible when circumstances warrant.
 
-# Program contacts and Information:
-• Administrative staff: Lisa Buchalski, lisa.buchalski@unh.edu, (603)862-3626
-• Department Chair: Elizabeth Harvey, elizabeth.harvey@unh.edu, (603)862-3418
-• Associate Chair: Melissa Aikens, melissa.aikens@unh.edu, (603)862-0840
-• Graduate Program Coordination & Admissions Committee (check with the department for current membership and option representatives). 
-• Program Faculty – see https://colsa.unh.edu/biological-sciences/people
-• Program web site: general academic information at https://colsa.unh.edu/biological-sciences/academics (scroll to the bottom for grad programs); copies of useful forms, faculty listing, and key links for current grad students and advisors at https://colsa.unh.edu/biological-sciences/key-documents .
+:::callout-important
+## Graduate School Deadlines
 
+Some Graduate School deadlines are firm and must be adhered to regardless of individual progress. Students are responsible for being aware of these deadlines.
 
-## Graduate Program Coordination and Admissions Committee (GPC) 
-This committee, chaired by the Graduate Coordinator, oversees the standards and implementation of the graduate program. Membership consists of the Associate Chair, the program coordinators for each graduate program, and one additional faculty member from each option. 
+See the [Graduate School Academic Calendar](https://gradschool.unh.edu/academics/graduate-school-academic-calendar) for current dates and requirements.
+:::
 
-The GPC is responsible for establishing universal guidelines for all graduate students in each degree (M.S. and Ph.D.), and brings forth suggestions for changes in policies pertaining to the program. The GPC welcomes input and suggestions from graduate students as well as faculty and staff. The GPC also oversees annual Progress Reviews for graduate students in the program (see Chapter 3). Graduate students should feel free to approach the Graduate Coordinator or another member of the committee for advice at any time, although ordinarily the student's faculty advisor and committee serve as the primary contact.
+## Graduate School Involvement
+
+The Graduate School provides opportunities and information related to the Graduate Student Senate (GSS), professional development workshops, the Graduate Research Conference, and additional funding programs.
+
+The Graduate School sends a **weekly email** highlighting upcoming programs, events, opportunities, and deadlines relevant to graduate students. Students are strongly encouraged to read this email regularly.
+
+## Program Contacts and Information
+
+- **Administrative staff:**  
+  Lisa Buchalski  
+  lisa.buchalski@unh.edu  
+  (603) 862-3626
+
+- **Department Chair:**  
+  Elizabeth Harvey  
+  elizabeth.harvey@unh.edu  
+  (603) 862-3418
+
+- **Associate Chair:**  
+  Melissa Aikens  
+  melissa.aikens@unh.edu  
+  (603) 862-0840
+
+- **Graduate Program Coordination & Admissions Committee (GPC):**  
+  Check with the department for current membership and option representatives
+
+- **Program Faculty:**  
+  <https://colsa.unh.edu/biological-sciences/people>
+
+- **Program Websites:**  
+  - General academic information:  
+    <https://colsa.unh.edu/biological-sciences/academics>  
+    (scroll to the bottom for graduate programs)  
+  - Forms, faculty listings, and key links for current graduate students and advisors:  
+    <https://colsa.unh.edu/biological-sciences/key-documents>
+
+## Graduate Program Coordination and Admissions Committee (GPC)
+
+The Graduate Program Coordination and Admissions Committee (GPC), chaired by the Graduate Coordinator, oversees the standards and implementation of the graduate program. Membership consists of the Associate Chair, the program coordinators for each graduate program, and one additional faculty member from each option.
+
+The GPC is responsible for establishing universal guidelines for all graduate students in each degree (M.S. and Ph.D.) and for bringing forward suggestions for changes in program policies. The committee welcomes input and suggestions from graduate students, faculty, and staff.
+
+The GPC also oversees annual **Progress Reviews** for graduate students in the program (see Chapter 3). Graduate students are encouraged to approach the Graduate Coordinator or another committee member for advice at any time; however, the student’s faculty advisor and committee ordinarily serve as the primary point of contact.
+
 
 
 
