--- a/01-program-overview.qmd
+++ b/01-program-overview.qmd
@@ -112,6 +112,8 @@ The GPC is responsible for establishing universal guidelines for all graduate st
 The GPC also oversees annual **Progress Reviews** for graduate students in the program (see Chapter 3). Graduate students are encouraged to approach the Graduate Coordinator or another committee member for advice at any time; however, the student’s faculty advisor and committee ordinarily serve as the primary point of contact.
 
 
+## Graduate Student Committee (GSC)
+
 
 
 
