--- a/index.qmd
+++ b/index.qmd
@@ -2,9 +2,9 @@
 
 [![](img/unh_logo.png){fig-align="left" width="25%"}](https://colsa.unh.edu/biological-sciences){fig-alt="UNH logo"}
 
-<br> This handbook provides an overview and practical details of requirements for the M.S. and Ph.D. degrees in the [Department of Biological Sciences (DBS)](https://colsa.unh.edu/biological-sciences). There are currently two graduate programs that exist within the department, the Integrative Biology and Marine Biology programs. While each program has specific curricular requirements, there remains much overlap between the two programs. Thus, this will serve as a general guide for being a graduate student in DBS with notes for each program as needed. Both programs, like all other graduate programs at UNH, are part of the UNH Graduate School; additional details, links, and resources for graduate students are available at the [UNH Graduate School website](https://gradschool.unh.edu/student-resources).
+<br> This handbook provides an overview and practical details of requirements for the M.S. and Ph.D. degrees in the [Department of Biological Sciences (DBS)](https://colsa.unh.edu/biological-sciences). There are currently six graduate programs that exist within the department: MS and PhD options for Integrative Biology, Marine Biology, Neuroscience & Behavior. While each program has specific curricular requirements, there remains much overlap between the two programs. Thus, this will serve as a general guide for being a graduate student in DBS with notes for each program as needed. Both programs, like all other graduate programs at UNH, are part of the UNH Graduate School; additional details, links, and resources for graduate students are available at the [UNH Graduate School website](https://gradschool.unh.edu/student-resources).
 
-The purpose of this document is to help ensure a more seamless transition into the department. The document is a living document and is by no means exhaustive. The goal is simply to try and get members of the lab on the same page and to help you be successful. You are encouraged to make additions and edits to this document (see Edit this page to the right. As a department member, you should have push access and not need to fork the repo). If you have suggestions for additions or changes, please [add a New Issue](https://github.com/QuantMarineEcoLab/dbs-grad-programs/issues/new) or contact Easton (easton.white\@unh.edu). 
+The purpose of this document is to help ensure a more seamless transition into the department. The document is a living document and is by no means exhaustive. The goal is simply to try and get members of the lab on the same page and to help you be successful. You are encouraged to make additions and edits to this document (see Edit this page to the right. As a department member, you should have push access and not need to fork the repo). If you have suggestions for additions or changes, please [add a New Issue](https://github.com/QuantMarineEcoLab/dbs-grad-programs/issues/new) or send an email (DBS.GradPrograms@unh.edu). 
 
 
 <br>
