--- a/02-admissions.qmd
+++ b/02-admissions.qmd
@@ -2,14 +2,15 @@
 
 ## Admissions Cycle
 
-Most students start our programs in Fall, but Spring and Summer starts are sometimes considered. Typically, prospective graduate students begin reaching out to our faculty the summer or Fall before they intend to apply. Early conversation helps with planning as faculty have to secure funds to support students. 
+Most students begin our graduate programs in the fall, though spring and summer start dates are occasionally possible. Prospective students typically reach out to faculty during the summer or fall prior to applying. Early communication is strongly encouraged, as faculty must plan ahead to secure funding and mentorship capacity for new students.
 
-Priority will be given to students that apply by our [December deadlines]((https://colsa.unh.edu/biological-sciences/academics)). A departmental admissions committee reviews applications through December and January. Typically, we start making offers around mid February. Students have until April 15th to formally accept or decline our offer. Between mid Feb and Apr, we may make additional offers as students accept or decline and if new funding becomes available.
+Priority consideration is given to applications submitted by the [December deadlines](https://colsa.unh.edu/biological-sciences/academics). A departmental admissions committee reviews applications in December and January. Initial offers are typically made beginning in mid-February.
+
+Students have until **April 15** to formally accept or decline an offer. Between mid-February and April, additional offers may be made as applicants respond to initial offers and as funding availability becomes clearer.
 
 ## Prospective Students
 
-Please consider watching this webinar recording that provides an introduction to graduate school in general and information about our specific programs. The webinar also includes a Q&A with current graduate students.
-
+We encourage prospective applicants to watch the webinar below, which provides an overview of graduate school and introduces our specific programs. The webinar also includes a Q&A with current graduate students.
 
 <iframe id="kaltura_player"
   src="https://cdnapisec.kaltura.com/p/505811/embedPlaykitJs/uiconf_id/55068052?iframeembed=true&entry_id=1_esf7ue9c&config%5Bprovider%5D=%7B%22widgetId%22%3A%221_mjy4jcdo%22%7D&config%5Bplayback%5D=%7B%22startTime%22%3A0%7D"
@@ -17,70 +18,89 @@ Please consider watching this webinar recording that provides an introduction to
   allowfullscreen
   allow="autoplay *; fullscreen *; encrypted-media *"
   sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
-  title="Fall 2025 College of Life Sciences and Agriculture (COLSA) Grad Open House">
+  title="COLSA Graduate Open House Webinar">
 </iframe>
 
-### Do I need to contact prospective advisors before applying?
+### Contacting Prospective Advisors
 
-Yes! If you are interested in a MS or PhD program within UNH’s Department of Biological Sciences (three distinct programs: Integrative Biology, Marine Biology, Neuroscience & Behavior), you must contact potential thesis mentors (professors) before applying to our programs. You can find a [directory of relevant mentors on the faculty webpage](https://colsa.unh.edu/biological-sciences/people) and under the [individual program descriptions](https://colsa.unh.edu/biological-sciences/academics). 
+#### Do I need to contact potential advisors before applying?
 
-It is never too early to contact potential thesis mentors, but we suggest contacting them between August and October of the year before you expect to start your degree (for example, contact a mentor in September 2025 if interested in applying by January 2026 for full consideration to begin as a graduate student in Fall 2026). However, you should never be afraid to reach out to a prospective mentor as graduate opportunities can open throughout the year.
+Yes. Applicants to M.S. or Ph.D. programs in the Department of Biological Sciences (Integrative Biology, Marine Biology, and Neuroscience & Behavior) must contact potential thesis advisors before submitting an application. Admission is contingent on identifying a faculty mentor who is able to support your graduate training.
 
-### How do I contact potential advisors? 
+A directory of faculty can be found on the [faculty webpage](https://colsa.unh.edu/biological-sciences/people) and on individual program pages within the [department website](https://colsa.unh.edu/biological-sciences/academics).
 
-After identifying professors whose interest align with yours, send them an email to introduce yourself and your interests. This email should contain the following:
+It is never too early to reach out to potential advisors. We recommend contacting faculty between August and October of the year prior to your intended start date. For example, contact potential advisors in September 2025 if you plan to apply by January 2026 for a Fall 2026 start. However, opportunities may arise throughout the year, so do not hesitate to reach out at any time.
 
-    A brief introduction of who you are and your current status
-    Your interests broadly
-    Why you are interested in this professor’s work and how it aligns with your own interests
-    Attachments of CV or resume, and unofficial transcripts
+#### How do I contact potential advisors?
 
-Still intimidated? Use the text below labeled “Email Template” to help you contact a professor.
+After identifying faculty whose research aligns with your interests, send a concise introductory email that includes:
 
-### Can I contact more than one professor in the Department of Biological Sciences or at UNH? 
+- A brief introduction and your current academic or professional status  
+- A description of your research interests  
+- A short explanation of why you are interested in that faculty member’s work  
+- Attachments: CV or résumé and unofficial transcripts  
 
-Absolutely! Graduate positions are very competitive, and often a professor can only take on one or two students each year (if any). Thus, it’s important to contact as many professors as possible, provided that their research aligns with your interests. You can let professors know who else you are contacting within the department or university when you contact them (see template below).
+An optional email template is provided below to help you get started.
 
-### What if I don’t get a response? 
+#### Can I contact more than one professor?
 
-Try again! Professors are very busy, and can receive hundreds of emails a day. Sometimes this results in slow reply times, or simply emails getting missed or lost. Wait at least a week, and then try to send again. If after three tries you still do not get a response, this likely means the professor is not taking on any graduate students in the near future.
+Yes. Graduate positions are competitive, and faculty may only take one or two students in a given year (if any). You are encouraged to contact multiple faculty members whose research aligns with your interests. You may mention in your email that you are also contacting other faculty within the department or university.
 
-### Are there fee waivers?
+#### What if I don’t receive a response?
 
-You might be eligible for a fee waiver after finding a prospective advisor that is open to supporting your application. 
+Faculty receive many emails and may have limited availability. If you do not receive a reply after one week, it is appropriate to send a polite follow-up. If you do not receive a response after two or three attempts, the faculty member is likely not accepting new students at that time.
 
-I have a prospective advisor who has encouraged me to apply. What do I do now?
+### Application Process and Funding
 
-On the web pages for each program, you’ll see details on how to apply (dates, letters of recommendation needed, etc). 
+#### Are application fee waivers available?
 
-### What funding is available for graduate students?
+Some applicants may be eligible for a fee waiver after identifying a prospective advisor who is open to supporting their application. Prospective students should discuss this with potential advisors.
 
-When you meet with a potential advisor, they’ll review available funding options with you. In most cases, we only admit students if we can support them financially (which typically includes waivers for health insurance and tuition) throughout their degree. Funding typically comes from a mix of graduate assistantships. Some students are supported through their advisor’s research grants, while many serve as teaching assistants in our biology labs (to be fully considered for assistantships, apply by the January deadline). The university also offers a limited number of fellowships, though these are usually awarded to current students rather than incoming ones. Additionally, some international students receive funding from their home governments or external fellowships such as those from the National Science Foundation or private foundations. Professor White maintains a list of some of these external fellowships. 
+#### I have a prospective advisor who encouraged me to apply. What next?
 
-### What are the requirements of each program?
+Visit the webpage for your intended program for detailed application instructions, including required materials, deadlines, and submission procedures.
 
-Each program differs a bit in their requirements (e.g., coursework requirements), so be sure to look through the individual program pages.
+#### What funding is available?
 
-### Other general tips and advice for applying to graduate school:
+In most cases, we admit students only when funding is available to support them financially throughout their degree. Support typically includes:
 
-Take time to think about why you want to go to graduate school and conduct research (and communicate this clearly when reaching out to prospective mentors). Before contacting prospective mentors, take some time to learn about their research (either via webpages, their publications, or other resources). Get help from advisors, your university career centers, and others for updating your resume or CV, ensuring that you highlight any research or scientific experiences, important courses taken, skills, and awards received.
+- Tuition and health insurance coverage  
+- A stipend through teaching or research assistantships  
 
-### Email Template
+Funding commonly comes from a combination of:
 
-If you are potentially interested in working with one or more professors towards a MS or PhD in Biological Sciences at the University of New Hampshire, you can use this template email to introduce yourself to these potential advisors.
+- Teaching assistantships in undergraduate biology laboratories  
+- Faculty research grants  
+- University fellowships (limited and often awarded to current students)  
+- External fellowships or government sponsorships (for some domestic and international students)  
 
-Please note that you should contact each professor individually (it’s okay to contact more than one faculty member in our department!); individualize your responses to each professor, particularly paragraphs #2 and #3). Also know that this is simply a template; prospective students do not need to follow these instructions exactly when reaching out to prospective mentors. We just hope this helps you get started and give you confidence in contacting faculty!
+To receive full consideration for assistantships, applicants should apply by the January deadline. Prospective students should discuss funding directly with potential advisors. Some faculty maintain lists of external fellowship opportunities that may also be helpful.
 
-Dear Dr. [insert professor’s full name here]:
+#### What are the requirements of each program?
 
-Paragraph 1: Introduce yourself! State your name, educational status and history (including GPA and major and/or degree. If you have graduated, include when you graduated and your current position.), and what semester and year you are aiming to start your graduate studies.
+Program requirements (such as coursework and milestones) vary. Please review the individual program pages for detailed information.
 
-Paragraph 2: Discuss your relevant qualifications and experience that make you an ideal candidate for our graduate program. This may include specific skills you have, research experiences, internships, publications or presentations, and relevant coursework.
+### General Advice for Applying to Graduate School
 
-Paragraph 3: Describe your specific interests within the field of Biological Sciences? How do these interests align with this professor’s work? What about this professor’s work excites you? Be specific when possible, demonstrating your own efforts to understand this professor’s research.
+- Reflect on your goals and motivations for pursuing graduate study and research  
+- Clearly communicate your interests and career goals when contacting potential advisors  
+- Familiarize yourself with faculty research through publications, websites, and other resources  
+- Seek feedback on your CV or résumé from mentors, advisors, or career centers  
+- Highlight research experience, relevant coursework, technical skills, and awards  
 
-Thank you for your time in reading this email and your consideration. I have attached my [resume/CV; make sure to attach!] and unofficial transcripts [attach]. I would enjoy an opportunity to chat with you further about potential opportunities as a graduate student in your research group.
+## Email Template for Contacting Faculty
 
-Sincerely,
+The template below is provided as a starting point for reaching out to potential advisors. Applicants should tailor each email to the individual faculty member and their research program.
 
-[Insert your full name here]
+Dear Dr. [Professor’s Last Name],
+
+My name is [Full Name], and I am currently [your academic or professional status]. I am interested in applying to the [M.S./Ph.D.] program in Biological Sciences at the University of New Hampshire and hope to begin in [term and year].
+
+I am writing to express my interest in your research on [briefly mention topic]. My background includes [brief description of relevant research experience, skills, coursework, or professional experience]. These experiences have prepared me for graduate study in [field or topic].
+
+I am particularly interested in your work on [specific project, paper, or research theme], and I am excited about the possibility of contributing to this area. I would be grateful for the opportunity to discuss whether you anticipate taking new graduate students.
+
+Thank you for your time and consideration. I have attached my CV and unofficial transcripts. I would welcome the opportunity to speak further.
+
+Sincerely,  
+[Full Name]
