--- a/11-finishing.qmd
+++ b/11-finishing.qmd
@@ -67,3 +67,27 @@ Although not required to answer the following questions for offboarding, they ma
 
 
 
+## Completing the Degree
+
+Students are responsible for understanding all program and Graduate School requirements, including:
+
+- Coursework and credit requirements  
+- Committee formation and paperwork  
+- Thesis formatting and submission requirements  
+- Defense scheduling and deadlines  
+
+A public seminar and thesis defense are required. The thesis must be provided to the committee at least **two weeks** before the defense.
+
+Final thesis submission must meet Graduate School deadlines and formatting requirements.
+
+---
+
+## Graduation
+
+Students must file an intent to graduate and meet all Graduate School deadlines.  
+See Graduate School graduation information:  
+http://www.gradschool.unh.edu/graduation.php
+
+
+
+
